--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div>
             <div class="contato">
                 <a>Nome <input></a>
+                <a>E-mail <input></a>
                 <a>Assunto <input></a>
                 <a>Mensagem <textarea id="mensagem"></textarea></a>
                 <a><input id="send" type="submit" value="ENVIAR"/></a>
