--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         
         <input type="radio" name="abas" class="abas" id="aba5">
-        <label for="aba5">CONTATE-NOS</label>
+        <label for="aba5">CONTATO</label>
         <div>
             <div class="contato">
                 <a>Nome <input></a>
