--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     de coletar e transmitir dados.</p>
                 </div>
                 <div class="orbital">
-                <div class="portfolio"><a>PortfóliO IoT</a></div>       
+                <div class="portfolio"><a>PortfóliO<span>IoT</span></a></div>       
                 <div class="wearable menuport"><a href="#">WEARABLE</a></div>
                 <div class="residencial menuport"><a href="#">RESIDENCIAL</a></div>
                 <div class="hospitalar menuport"><a href="#">HOSPITALAR</a></div>
