--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
         <div id="social">
             <a title="Compromisso Sócio-Ambiental"><i class="fab fa-envira"></i></a>
-            <a title="Av. Liberdade, 3209 - Centro - Bayeux - PB" href="https://www.google.com.br/maps/place/Av.+Liberdade,+3209+-+S%C3%A3o+Bento,+Bayeux+-+PB,+58305-006/@-7.1243756,-34.924261,17z/data=!3m1!4b1!4m5!3m4!1s0x7ace89bc41dcf09:0x9ac3ad78efdae791!8m2!3d-7.1243809!4d-34.9220723" target="blank"><i class="fas fa-map-marker-alt" style="font-size:28px"></i></a>
+            <a title="Av. Liberdade, 3209 - Centro - Bayeux - PB" href="https://www.google.com.br/maps/place/Av.+Liberdade,+3209+-+S%C3%A3o+Bento,+Bayeux+-+PB,+58305-006/@-7.1243756,-34.924261,17z/data=!3m1!4b1!4m5!3m4!1s0x7ace89bc41dcf09:0x9ac3ad78efdae791!8m2!3d-7.1243809!4d-34.9220723" target="blank"><i class="fas fa-map-marker-alt"></i></a>
             <a><i class="fab fa-whatsapp-square" title="(83) 98819-0340"></i>
             <a href="https://facebook.com" target="blank"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
             <a href="https://twitter.com" target="blank"><i class="fab fa-twitter-square" aria-hidden="true"></i></a>
