--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <section class="abas-container">        
         <input type="radio" name="abas" class="abas" id="aba1" checked>
-        <label class="fa fa-home" for="aba1"><a>HOME</a></label>
+        <label class="fas fa-home" for="aba1"><a>HOME</a></label>
             <div>
                 <div class="iot">
                     <h3>O que é IoT?</h3>
