--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="orbital">
                 <div class="portfolio"><a>PortfóliO IoT</a></div>       
                 <div class="wearable menuport"><a href="#">WEARABLE</a></div>
-                <div class="residencial menuport"><a href="#">RESIDENCIAL</a></div>
-                <div class="hospitalar menuport"><a href="#">HOSPITALAR</a></div>
+                <div class="residencial menuport"><a href="#">DOMÓTICA</a></div>
+                <div class="hospitalar menuport"><a href="#">SAÚDE</a></div>
                 <div class="energia menuport"><a href="#">ENERGIA</a></div>
                 <div class="seguranca menuport"><a href="#">SEGURANÇA</a></div>
                 <div class="urbano menuport"><a href="#">URBANO</a></div>
