--- a/index.html
+++ b/index.html
@@ -48,14 +48,20 @@
 
         <input type="radio" name="abas" class="abas" id="aba2">
         <label class="fas fa-shopping-cart" for="aba2"><a>PRODUTOS</a></label>
-        <div>
-            Aba 2
+        <div class="produtos">
+            <a>- Automação Embarcada;
+            - Sensoriamento Remoto;
+            - Segurança Patrimonial Preditiva;
+            - Data Science;
+            - Business Intelligence.
+
+        Para mais detalhes sobre nossos produtos, fale com nossos consultores.</a>
         </div>
         
         <input type="radio" name="abas" class="abas" id="aba3">
         <label class="fas fa-dollar-sign" for="aba3"><a>ORÇAMENTO</a></label>
         <div class="orcamento">
-            <a>Para Orçamento, agende a visita de um projetista, pois cada projeto tem sua particularidade. </a>
+            <a>Para orçamento, agende a visita de um consultor, pois cada projeto tem sua particularidade. </a>
         </div>
 
         <input type="radio" name="abas" class="abas" id="aba4">
