--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
         <input type="radio" name="abas" class="abas" id="aba2">
         <label class="fas fa-shopping-cart" for="aba2"><a>PRODUTOS</a></label>
         <div class="produtos">
-            <a>- Automação Embarcada;
-            - Sensoriamento Remoto;
-            - Segurança Patrimonial Preditiva;
-            - Data Science;
-            - Business Intelligence.
+            <ul>
+                <li>- Automação Embarcada;</li>
+                <li>- Sensoriamento Remoto;</li>
+                <li>- Segurança Patrimonial Preditiva;</li>
+                <li>- Data Science;</li>
+                <li>- Business Intelligence.</li>
+            </ul>
 
-        Para mais detalhes sobre nossos produtos, fale com nossos consultores.</a>
+        <a>Para mais detalhes sobre nossos produtos, fale com nossos consultores.</a>
         </div>
         
         <input type="radio" name="abas" class="abas" id="aba3">
