--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <label class="fas fa-shopping-cart" for="aba2"><a>PRODUTOS</a></label>
         <div class="produtos">
             <ul>
-                <li>- Automação Embarcada;</li>
-                <li>- Sensoriamento Remoto;</li>
-                <li>- Segurança Patrimonial Preditiva;</li>
-                <li>- Data Science;</li>
-                <li>- Business Intelligence.</li>
+                <li>Automação Embarcada;</li>
+                <li>Sensoriamento Remoto;</li>
+                <li>Segurança Patrimonial Preditiva;</li>
+                <li>Data Science;</li>
+                <li>Business Intelligence.</li>
             </ul>
             <a>Para mais detalhes sobre nossos produtos, fale com nossos consultores.</a>
         </div>
